# querry

./: Cargo.toml  LICENSE  Makefile  build.rs  readme.MD
.github/workflows/: build-ci.yml  ci.yml
migrations/: 20250520173500__initial_schema.sql
resources/: collection.ui  collection_item.ui  collection_row.ui  request_row.ui  requests_view.ui  resources.gresource.xml  rest.ui  style.css  window.ui
src/: lib.rs  main.rs
src/callbacks/: collections.rs  images.rs  mod.rs  requests.rs
src/collection/: imp.rs  mod.rs
src/collections/: imp.rs  mod.rs
src/collections/collection_item/: imp.rs  mod.rs
src/collections/collection_row/: imp.rs  mod.rs
src/collections/requests/request_item/: imp.rs  mod.rs
src/collections/requests/request_row/: imp.rs  mod.rs
src/database/: mod.rs
src/database/migrator/: m20231229_000001_create_collection_table.rs  m20231229_000002_create_collection_header_table.rs  mod.rs
src/entities/: collection.rs  collection_header.rs  mod.rs  prelude.rs
src/requests/: mod.rs
src/requests/request_item/: imp.rs  mod.rs
src/requests/request_row/: imp.rs  mod.rs
src/requests_view/: imp.rs  mod.rs
src/rest/: imp.rs  mod.rs
src/utils/: collections.rs  images.rs  messaging.rs  mod.rs  sys_dir.rs
src/utils/crud/: collections.rs  mod.rs  requests.rs
src/window/: imp.rs  mod.rs
ui/: app-window.slint  base_split.slint  global.slint  landing_page.slint  main.slint  tests.slint  theme.slint
ui/components/: buttons.slint  collection_dropdown.slint  collection_item.slint  collections.slint  forms.slint  gridview.slint  headers.slint  icons_popup.slint  landing_page.slint  request_dropdown.slint  request_item.slint  requests.slint  shared.slint
