[package]
name = "querry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
once_cell = "1.19.0"
env_logger = "0.8.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_1"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"
lazy_static = "1.4.0"

[build-dependencies]
glib-build-tools = "0.18.0"
